@@ -1,6 +1,8 @@
 This file documents the revision history for Perl extension Catalyst.
 
 ?        ?
+       - Properly work around lighttpd PATH_INFO vs. SCRIPT_NAME bug.
+         (Mark Blythe)
        - add _application accessor
        - Support current_view
        - Allow use Catalyst::Test without app name (Ton Voon, Altinity)
